--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,8 @@ dist-ssr
 *.local
 
 # Editor directories and files
-.vscode/*
-!.vscode/extensions.json
+.vscode
+/**/.vscode
 .idea
 .DS_Store
 *.suo
@@ -22,3 +22,4 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+/**/build
