--- a/transaction-react/package.json
+++ b/transaction-react/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@rarimo/nft-checkout": "^1.5.0-rc.4",
-    "@rarimo/provider": "^1.5.0-rc.4",
-    "@rarimo/react-nft-checkout": "^1.5.0-rc.4",
-    "@rarimo/react-provider": "^1.5.0-rc.4",
+    "@rarimo/nft-checkout": "^1.5.0-rc.11",
+    "@rarimo/provider": "^1.5.0-rc.11",
+    "@rarimo/providers-evm": "^1.5.0-rc.11",
+    "@rarimo/react-nft-checkout": "^1.5.0-rc.11",
+    "@rarimo/react-provider": "^1.5.0-rc.11",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
