--- a/wallet-access/package.json
+++ b/wallet-access/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@rarimo/provider": "^1.5.0-rc.0",
+    "@rarimo/provider": "^1.5.0-rc.11",
+    "@rarimo/providers-evm": "1.5.0-rc.11",
     "vue": "^3.2.47"
   },
   "devDependencies": {
