--- a/transaction/package.json
+++ b/transaction/package.json
@@ -9,8 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@rarimo/nft-checkout": "^1.5.0-rc.7",
-    "@rarimo/provider": "^1.5.0-rc.7",
+    "@rarimo/nft-checkout": "^1.5.0-rc.11",
+    "@rarimo/provider": "^1.5.0-rc.11",
+    "@rarimo/providers-evm": "^1.5.0-rc.11",
     "ethers": "^5.7.2",
     "vue": "^3.2.47"
   },
