--- a/transaction/package.json
+++ b/transaction/package.json
@@ -10,9 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@rarimo/nft-checkout": "^1.5.0-rc.11",
-    "@rarimo/provider": "^1.5.0-rc.11",
-    "@rarimo/providers-evm": "^1.5.0-rc.11",
+    "@rarimo/nft-checkout": "^2.0.0-rc.0",
+    "@rarimo/provider": "^2.0.0-rc.0",
+    "@rarimo/providers-evm": "^2.0.0-rc.0",
+    "@rarimo/shared": "^2.0.0-rc.0",
     "ethers": "^5.7.2",
     "vue": "^3.2.47"
   },
