--- a/transaction-react/package.json
+++ b/transaction-react/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@rarimo/nft-checkout": "^2.0.0-rc.9",
     "@rarimo/provider": "^2.0.0-rc.9",
+    "@rarimo/providers-evm": "^2.0.0-rc.9",
     "@rarimo/react-nft-checkout": "^2.0.0-rc.9",
+    "@rarimo/react-provider": "^2.0.0-rc.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
